<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginBottom="92dp"
        tools:context=".ui.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivImageProduct"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="1:1"
                android:src="@drawable/product_current"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toBottomOf="@id/ivImageProduct"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_price"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toBottomOf="@id/tvProductName"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btnLike"
                android:layout_width="32dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:srcCompat="@drawable/heart_svg_icon"
                android:tint="@android:color/system_accent2_500"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnShare"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btnShare"
                android:layout_width="32dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:srcCompat="@drawable/share_svg_vectors"
                android:tint="@android:color/system_accent2_500"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="12dp"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btnBack"
                android:layout_width="32dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:srcCompat="@drawable/chevron_icon"
                android:tint="@android:color/system_accent2_500"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="32dp"
                android:layout_marginStart="12dp"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/cProductDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipStartPadding="0dp"
                app:chipEndPadding="0dp"
                app:chipMinHeight="28dp"
                app:chipMinTouchTargetSize="0dp"
                android:layout_marginStart="12dp"
                android:text="@string/product_discount"
                android:textColor="@android:color/system_error_500"
                android:textSize="12sp"
                app:chipBackgroundColor="@android:color/system_error_100"
                app:chipStrokeColor="@android:color/system_error_100"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvProductPrice"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDiscountedPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discounted_price"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toEndOf="@id/cProductDiscount"
                app:layout_constraintTop_toTopOf="@id/cProductDiscount"
                app:layout_constraintBottom_toBottomOf="@id/cProductDiscount"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/d1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerThickness="1dp"
                app:dividerColor="@android:color/system_neutral2_50"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cProductDiscount"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvProductDescTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_desc_title"
                android:textStyle="bold"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/d1"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvProductDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_desc"
                android:maxLines="2"
                android:ellipsize="end"
                android:textColor="@android:color/system_accent2_500"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvProductDescTitle"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/tvShowMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button.TextButton"
                android:text="@string/show_more"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="0dp"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvProductDesc"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/d2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerThickness="1dp"
                app:dividerColor="@android:color/system_neutral2_50"
                android:layout_marginHorizontal="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvShowMore" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/d3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerThickness="8dp"
                app:dividerColor="@android:color/system_neutral2_50"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/d2"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvServingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serving_title"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d3"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvServingAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serving_amount"
                android:textSize="12sp"
                android:textColor="@android:color/system_accent2_500"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toEndOf="@id/tvServingTitle"
                app:layout_constraintTop_toTopOf="@+id/tvServingTitle"
                app:layout_constraintBottom_toBottomOf="@id/tvServingTitle"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvServingList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvServingTitle" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/d4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerThickness="8dp"
                android:layout_marginTop="12dp"
                app:dividerColor="@android:color/system_neutral2_50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvServingList" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d4"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optional"
                android:textSize="12sp"
                android:textColor="@android:color/system_accent2_500"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toEndOf="@id/tvNotes"
                app:layout_constraintTop_toTopOf="@+id/tvNotes"
                app:layout_constraintBottom_toBottomOf="@id/tvNotes"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notes_placeholder"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNotes">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvSimilarProductTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/similar_product_title"
                android:textStyle="bold"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtNotes"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSimilarProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginVertical="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSimilarProductTitle"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="84dp"
        app:cardCornerRadius="0dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCart"
        android:layout_width="60dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        style="@style/Widget.Material3.Button.IconButton.Outlined"
        app:iconTint="@android:color/holo_blue_dark"
        app:strokeColor="@android:color/holo_blue_dark"
        app:icon="@drawable/cart_svg_icon"
        app:iconGravity="textTop"
        android:gravity="center"
        app:cornerRadius="4dp"
        app:iconSize="24dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddToCart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_to_cart_button"
        android:textColor="@color/white"
        app:icon="@drawable/plus_svg_icon"
        app:iconGravity="textStart"
        app:cornerRadius="4dp"
        android:paddingVertical="16dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintStart_toEndOf="@id/btnCart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>