<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    app:layout_constraintVertical_bias="0.5"
    app:layout_constraintHorizontal_bias="0.5"
    android:paddingVertical="80dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineSpotShadowColor="@android:color/darker_gray"
        app:cardCornerRadius="16dp"
        android:layout_marginBottom="12dp"
        android:paddingBottom="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivProductImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_item_name"
                android:textSize="16sp"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivProductImage"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_item_price"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toBottomOf="@id/tvProductName"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/cProductDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/product_item_discount"
                android:textSize="12sp"
                android:textColor="@android:color/system_error_500"
                app:chipBackgroundColor="@android:color/system_error_100"
                app:chipStrokeColor="@android:color/system_error_100"
                app:chipStartPadding="0dp"
                app:chipEndPadding="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvProductPrice"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDiscountedPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_item_discounted_price"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/cProductDiscount"
                app:layout_constraintTop_toTopOf="@id/cProductDiscount"
                app:layout_constraintBottom_toBottomOf="@id/cProductDiscount"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</FrameLayout>



