<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <ScrollView
        android:id="@+id/navigation_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivImageProduct"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="1:1"
                android:src="@drawable/product_current"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toBottomOf="@id/ivImageProduct"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_price"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toBottomOf="@id/tvProductName"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btnLike"
                android:layout_width="32dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:srcCompat="@drawable/heart_svg_icon"
                android:tint="@android:color/system_accent2_500"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnShare"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btnShare"
                android:layout_width="32dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:srcCompat="@drawable/share_svg_vectors"
                android:tint="@android:color/system_accent2_500"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="12dp"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btnBack"
                android:layout_width="32dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:srcCompat="@drawable/chevron_icon"
                android:tint="@android:color/system_accent2_500"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="32dp"
                android:layout_marginStart="12dp"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/cProductDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipStartPadding="0dp"
                app:chipEndPadding="0dp"
                app:chipMinHeight="28dp"
                app:chipMinTouchTargetSize="0dp"
                android:layout_marginStart="12dp"
                android:text="@string/product_discount"
                android:textColor="@android:color/system_error_500"
                android:textSize="12sp"
                app:chipBackgroundColor="@android:color/system_error_100"
                app:chipStrokeColor="@android:color/system_error_100"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvProductPrice"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDiscountedPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discounted_price"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toEndOf="@id/cProductDiscount"
                app:layout_constraintTop_toTopOf="@id/cProductDiscount"
                app:layout_constraintBottom_toBottomOf="@id/cProductDiscount"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/d1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerThickness="1dp"
                app:dividerColor="@android:color/system_neutral2_50"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cProductDiscount"
                />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/d2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerThickness="1dp"
                app:dividerColor="@android:color/system_neutral2_50"
                android:layout_marginHorizontal="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cProductDiscount" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/d3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerThickness="8dp"
                app:dividerColor="@android:color/system_neutral2_50"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/d2"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/d3"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optional"
                android:textSize="12sp"
                android:textColor="@android:color/system_accent2_500"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toEndOf="@id/tvNotes"
                app:layout_constraintTop_toTopOf="@+id/tvNotes"
                app:layout_constraintBottom_toBottomOf="@id/tvNotes"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notes_placeholder"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNotes">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_fragment"
                android:gravity="center"
                android:layout_marginTop="60dp"
                app:layout_constraintTop_toBottomOf="@+id/edtNotes"
                app:layout_constraintStart_toStartOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoToProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Go To Profile"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintStart_toStartOf="@id/tvTitle"
                app:layout_constraintEnd_toEndOf="@id/tvTitle"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGoToDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Go To Dialog"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/btnGoToProfile"
                app:layout_constraintStart_toStartOf="@id/tvTitle"
                app:layout_constraintEnd_toEndOf="@id/tvTitle"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>